--- a/exercise 1.html
+++ b/exercise 1.html
@@ -1,24 +1,41 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content>
-	<meta >
+	<meta name="viewport">
+
     <title>info data diri</title>
 
-            <link rel="stylesheet" href="style.css">
+    <style type="text/css">
+    span{
+    background-color:pink;
+    }
+    .box {
+    background-color: yellow;
+    border: 2px dashed blueviolet;
+    padding: 50px;
+    width: 500px;
+    }
+    .box-2 {
+    background-color:red;
+    border: 2px dashed #000000;
+    padding: 20px;
+    width: 300px;
+    }
+    </style>
 </head>
 <body>
-	<h2 style="background-color:blue">Info Data Diri</h2>
+	<h2 style="background-color: greenyellow">Info Data Diri</h2>
 
     <div class="box">
         Nama        : Miftahul Mustafirin <br>
         alamat      : Bedukan, Pleret, Bantul, D.I. Yogyakarta <br>
         asal kota   : Bantul <br>
         nomor WA    : 081578743265<br>
-		</div>
+        </div>
+        <br>
     <div class="box-2">
         kuliah di   : Universitas Gadjah Mada<br>
         semester    : 2 </div>
-    
+    <span>terima kasih</span>
 </body>
 </html>
